# fastapi_mmr

./: pyproject.toml  test.sh
