[tool.poetry]
name = "mmr"
version = "0.1.0"
description = ""
authors = ["seungwon0113 <dhkd0113@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.12
strict = true
plugins = [
    "pydantic.mypy"
]